--- a/flea_market/src/components/Product/Products.css
+++ b/flea_market/src/components/Product/Products.css
@@ -1,7 +1,9 @@
 .productCard {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3);
+    gap: 10;
+    grid-auto-rows: minmax(200px, auto);
+  
     align-items: center;
     width: 250px;
     height: 350px;
@@ -13,13 +15,18 @@
     background-color: #fff;
     color: #000;
     text-decoration: none;
-    transition: all 0.3s ease-in-out;
+    image-rendering: auto;
+    size: 100px;
+    
+    
 }
 
 .ProductWindow {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    grid-template-columns: repeat(3);
+    gap: 10;
+    grid-auto-rows: minmax(200px, auto);
+   
     align-items: center;
     width: 250px;
     height: 350px;
@@ -31,5 +38,6 @@
     background-color: #fff;
     color: #000;
     text-decoration: none;
-    transition: all 0.3s ease-in-out;
+    
 }
+
