--- a/flea_market/src/components/Product/Products.css
+++ b/flea_market/src/components/Product/Products.css
@@ -1,4 +1,4 @@
-.productCard {
+.ProductCard {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -6,7 +6,7 @@
     width: 250px;
     height: 350px;
     margin: 100px;
-    padding: 10px;
+    padding: 6rem;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 0 10px #ccc;
@@ -28,7 +28,7 @@
     width: 250px;
     height: 350px;
     margin: 100px;
-    padding: 10px;
+    padding: 6rem;
     border: 20px solid #44a2a8;
     border-radius: 5px;
     box-shadow: 0 0 10px #ccc;
