--- a/flea_market/src/index.css
+++ b/flea_market/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  display: flex;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,13 +9,3 @@ body {
   align-content: center;
 }
 
-.container{
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.card{
-  border-radius: 10px;
-  padding: 10px 10px 10px;
-  margin-top: 50px;
-}
