Products are finally in the middle!!

--- a/flea_market/src/components/SideBar/SideBar.css
+++ b/flea_market/src/components/SideBar/SideBar.css
@@ -1,6 +1,8 @@
 .SideBar{
-    display: inline;
+    display: inline-table;
     background-color: aquamarine;
-    font-size: xx-large;
+    font-size: x-large;
     font-family: 'Times New Roman', Times, serif;
+    background-color: grey;
+    padding-inline: 10px;
 }
