--- a/flea_market/src/components/NavBar/NavBar.css
+++ b/flea_market/src/components/NavBar/NavBar.css
@@ -4,10 +4,11 @@
     align-items: center;
     padding: 0 1rem;
     height: 5rem;
-    background-color: #fff;
     border-bottom: 1px solid #ddd;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
     font-size: x-large;
     font-family: 'Times New Roman', Times, serif;
     font-weight: 200;
+    font-style: oblique;
+    background-color: gray;
 }
