--- a/flea_market/src/components/Product/Products.css
+++ b/flea_market/src/components/Product/Products.css
@@ -1,13 +1,11 @@
-.ProductCard {
-    display: flex;
+ProductCard {
+    display: inline-flex;
     justify-content: space-between;
     align-items: center;
     width: 250px;
     height: 350px;
     margin: 100px;
     padding: 6rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
     box-shadow: 0 0 10px #ccc;
     background-color: #fff;
     color: #000;
@@ -17,9 +15,11 @@
     text-align: center;
     max-block-size: 50px;
     image-rendering: crisp-edges;
+    margin-inline-start: 20px;
+    writing-mode: horizontal-tb;
 }
 
-.ProductWindow {
+ProductWindow {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,12 +27,31 @@
     height: 350px;
     margin: 100px;
     padding: 6rem;
-    border: 20px solid #44a2a8;
-    border-radius: 5px;
     box-shadow: 0 0 10px #ccc;
     background-color: #b2cac7;
     color: #000;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
+    margin-inline-start: 20px;
+    writing-mode: horizontal-tb;
 }
 
+body{
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 0 10px #ccc;
+    background-color: #d9e9e7;
+    color: #000;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+    margin-inline-start: 20px;
+    writing-mode: horizontal-tb; 
+}
+
+img{
+    width: 300px;
+    height: 300px;
+    margin: 10px;
+    border: 5px solid #000;
+    border-radius: 5px;
+}
