--- a/flea_market/src/index.css
+++ b/flea_market/src/index.css
@@ -6,5 +6,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   align-content: center;
+  border: 10px black;
 }
 
