--- a/flea_market/src/index.css
+++ b/flea_market/src/index.css
@@ -6,5 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   align-content: center;
+  font-size: medium;
+  background-color: rgb(226, 192, 148);
 }
 
