--- a/flea_market/src/components/NavBar/NavBar.css
+++ b/flea_market/src/components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.NavBar {
+/* .NavBar {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,4 +11,4 @@
     font-style: oblique;
     background-color: rgb(226, 192, 148);
     border: 5px black;
-}
+} */
