--- a/flea_market/src/Product/Products.css
+++ b/flea_market/src/Product/Products.css
@@ -1,4 +1,4 @@
-ProductCard {
+/* ProductCard {
     display: inline-block;
     box-sizing: content-box;
     justify-content: space-between;
@@ -54,4 +54,4 @@ img{
     margin: 10px;
     border: 3px solid #000;
     border-radius: 5px;
-}
+} */
