--- a/flea_market/src/NavBar/NavBar.css
+++ b/flea_market/src/NavBar/NavBar.css
@@ -1,8 +1,8 @@
-/* .NavBar {
+.NavBar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 5rem;
+    height: 10vh;
     border-bottom: 1px solid #ddd;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
     font-size: x-large;
@@ -11,4 +11,4 @@
     font-style: oblique;
     background-color: rgb(226, 192, 148);
     border: 5px black;
-} */
+}
