--- a/flea_market/src/index.css
+++ b/flea_market/src/index.css
@@ -1,3 +1,7 @@
+* {
+  border: #00ff6e 1px solid;
+}
+
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,8 +14,9 @@
   background-color: rgb(226, 192, 148);
 } */
 
-.products {
+/* .products {
+  width: 80vw;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
+} */
