--- a/flea_market/src/Product/Products.css
+++ b/flea_market/src/Product/Products.css
@@ -18,8 +18,6 @@
     writing-mode: horizontal-tb;
 }
 
-
-
 ProductWindow {
     display: inline-block;
     box-sizing: content-box;
@@ -54,3 +52,19 @@ img{
     border: 3px solid #000;
     border-radius: 5px;
 } */
+
+.ProductCreate {
+    display: inline-block;
+    box-sizing: content-box;
+    justify-content: space-between;
+    align-items: center;
+    width: 40vw;
+    height: 350px;
+    margin: 1rem;
+    padding: 1rem;
+    color: #000;
+    text-decoration: none;
+    transition: all 0.3s ease-in-out;
+    margin-inline-start: 20px;
+    writing-mode: horizontal-tb;
+}
