--- a/flea_market/src/index.css
+++ b/flea_market/src/index.css
@@ -45,3 +45,58 @@
   padding: 0;
   border: 5px black;
 }
+
+.SearchBar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 100%;
+  height: 10vh;
+  background-color: rgb(226, 192, 148);
+  border: 5px black;
+}
+
+.SearchBar__input {
+  width: 50%;
+  height: 5vh;
+  border-radius: 0.5rem;
+  border: 1px solid #ddd;
+  padding: 0.5rem;
+  font-size: 1rem;
+  margin-right: 0.5rem;
+}
+
+.SearchBar_result {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 10rem;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+.SearchBar_result::-webkit-scrollbar {
+  display: none;
+}
+
+.SearchBar_result_link {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  color: black;
+  text-decoration: none;
+  margin-left: 10px;
+  background-color: lightgrey;
+}
+
+#clearBtn {
+  cursor: pointer;
+}
